Added new scripts javascript

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -21,13 +21,12 @@
 		<button type="button" onclick="alertFunction()">Alert</button>
 
 		<!-------------------------------------------------------------->
-		<h3>-- Console log --</h3><p>
-		Clique na página e vá em <b>incorporar</b>, após vá em <b>Console</b>.
-		<script type="text/javascript" src="js/console_log.js"></script>
+		<h3>-- Window Print --</h3><p>
+		<input type="button" onclick="windowPrint()" value="Print">
 
 		<!-------------------------------------------------------------->
-		<h3>-- Console log --</h3><p>
-		<input type="button" onclick="windowPrint()" value="Print">
+		<h3>-- Prompt --</h3><p>
+		<input type="button" onclick="Prompt()" value="Prompt">
 
 
 		<script type="text/javascript" src="js/out_text.js"></script>
@@ -35,6 +34,7 @@
 		<script type="text/javascript" src="js/operations.js"></script>
 		<script type="text/javascript" src="js/window_alert.js"></script>
 		<script type="text/javascript" src="js/window_print.js"></script>
+		<script type="text/javascript" src="js/prompt_input.js"></script>
 
 	</body>
 
